Fixed distribution for desktop and not showing bio if does not exist

--- a/src/app/components/RestaurantBio/RestaurantBio.module.scss
+++ b/src/app/components/RestaurantBio/RestaurantBio.module.scss
@@ -10,11 +10,13 @@
   bottom: 0;
   background-color: $white;
   z-index: 3;
+
   .Bio__button{
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 0;
+    right: 0;
     padding: 1rem;
+
     .Bio__Button__Button {
       display: block;
       height: 5rem;
@@ -39,7 +41,16 @@
     position: absolute;
     top: 0;
     left: 0;
-    color: black;
+    color: $black;
+    padding: 1.6rem 1.6rem 1.6rem 2.2rem;
+    margin: 0;
+  }
+
+  .Bio__Text {
+    position: absolute;
+    top: 4.2rem;
+    left: 0;
+    color: $black;
     padding: 1.6rem 1.6rem 1.6rem 2.2rem;
     margin: 0;
   }
