--- a/src/app/views/home/home.view.scss
+++ b/src/app/views/home/home.view.scss
@@ -25,5 +25,9 @@
     & > * {
       margin: 0 1.2rem;
     }
+
+    @media only screen and (min-width: 768px) {
+      height: 12rem;
+    }
   }
 }
